--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ nav {
   padding: 10px;
   text-align: center;
 }
-/*
+
  .container {
   background-color: rgb(255, 236, 226);
   width: 70%;
@@ -49,7 +49,7 @@ button {
   color: white;
 }
 
-.task {
+/*.task {
   display: flex;
   align-items: center;
   background-color: white;
