--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ button {
   color: white;
 }
 
-/*.task {
+.task {
   display: flex;
   align-items: center;
   background-color: white;
@@ -77,4 +77,4 @@ button {
 }
 .task button:hover {
   background-color: red;
-} */
+}
